# USV_Nvigation

./: .gitignore  README.md  push_to_nx.sh  rviz2.rviz
.githooks/: pre-push
docs/: 1️⃣ 为什么节点消失.md  Nav2 水面机器人避障架构说明与方案对比.md  Nav2参数详解与调参指南.md  UPPER_LAYER_DELIVERY.md  USV 地面站NX 联网部署手册.md  USV_NAV_MISSION_SYNC_PLAN.md  git-常用命令.md  livox_mid_360_连接与驱动编译记录.md  map与gnss的对齐.md  nav_gcs_refactor_plan.md  nav_task_interface.md  service_pause_emergency_plan.md  地图与GNSS-Nav2对齐说明.md  定位与Nav2频率调试指南.md  导航接口与参数速查.md  工作进度汇报.md  项目运行与联调.md
docs/msg/: nav_status_snapshot.msg  nav_task_event.msg  nav_task_result.msg  nav_waypoint_gps.msg
docs/srv/: README.md  nav_cancel_mission.srv  nav_emergency_stop.srv  nav_send_waypoints.srv  nav_set_pause.srv
map/HK/: map.yaml
map/HK (1)/: map.pgm  map.yaml  导航点.wps
map/N51_30_2020LC030/: N51_30_2020LC030_IMG.shp.xml  N51_30_2020LC030_MAT.xls
map/华庄河道瓦片及全局栅格/huazhuang/: map.yaml
map/华庄河道瓦片及全局栅格/huazhuang/tiles/: manifest.json
map/珊溪水库地图纯享版/: map.yaml  map_shanxi.yaml  test.txt  tiles_manifest.json
map/珊溪水库地图纯享版/snapshot/: base_map.meta.json  base_map.pgw
map/珊溪水库地图纯享版/tiles/tile_0_0/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_0_1/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_0_10/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_0_11/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_0_2/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_0_3/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_0_4/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_0_5/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_0_6/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_0_7/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_0_8/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_0_9/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_10_0/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_10_1/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_10_10/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_10_11/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_10_2/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_10_3/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_10_4/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_10_5/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_10_6/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_10_7/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_10_8/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_10_9/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_11_0/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_11_1/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_11_10/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_11_11/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_11_2/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_11_3/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_11_4/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_11_5/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_11_6/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_11_7/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_11_8/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_11_9/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_0/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_1/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_10/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_11/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_2/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_3/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_4/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_5/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_6/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_12_7/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_12_8/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_12_9/: map.yaml  map_fused.pgm
map/珊溪水库地图纯享版/tiles/tile_13_0/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_13_1/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_13_10/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_13_11/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_13_2/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_13_3/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_13_4/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_13_5/: map.yaml
map/珊溪水库地图纯享版/tiles/tile_13_6/: map.yaml
map/老虎谭水库瓦片及全局栅格/: map.yaml
map/老虎谭水库瓦片及全局栅格/tiles/: manifest.json
scripts/: git-untrack-non-src.sh  install-git-hooks.sh
src/USV_NAV/: CONTRIBUTING.md  README.md  requirements.txt
src/USV_NAV/docs/: PROJECT_ARCHITECTURE_AND_NAV2.md  mission_bridge与上层对接.md  实船调试.md  实船迁移与MAVROS话题.md  实船配置修改清单.md  船体与导航参数索引.md
src/USV_NAV/workspace_nav/: package.xml  setup.py
src/USV_NAV/workspace_ros/: package.xml  setup.py
src/YILDIZ-USV/: README.md
src/YILDIZ-USV/docs/: PROJECT_ARCHITECTURE_AND_NAV2.md  实船调试.md  实船迁移与MAVROS话题.md  实船配置修改清单.md  船体与导航参数索引.md
src/YILDIZ-USV/workspace_gz/: package.xml
src/YILDIZ-USV/workspace_nav/: package.xml  setup.py
src/YILDIZ-USV/workspace_ros/: package.xml  setup.py
src/m_common/: CMakeLists.txt  README.md  package.xml
src/m_common/cmake/: m_common-extras.cmake.in
src/m_common/include/m_common/: result_code.hpp
src/m_common/m_utils/: CMakeLists.txt
src/m_common/m_utils/include/m_utils/: data_manger.h  log_demo.hpp  metadata_util.hpp  string_util.hpp
src/m_common/m_utils/src/: log_demo.cpp  metadata_util.cpp  string_util.cpp
src/m_common/mlogger/: CMakeLists.txt
src/m_common/mlogger/include/mlogger/: mlogger.hpp
src/m_common/msg/: NavStatus.msg  NavTaskEvent.msg  StampedStatus.msg  VideoWarningCode.msg
src/m_common/rtsp_interface/: CMakeLists.txt
src/m_common/rtsp_interface/include/m_common/rtsp_interface/: rtsp_client.hpp  rtsp_client_gst.hpp  rtsp_publisher.hpp  rtsp_remote_client_push.hpp  video_file_gst.hpp
src/m_common/rtsp_interface/src/: backend_gstreamer.cpp  backend_iface.hpp  rtsp_client.cpp  rtsp_client_gst.cpp  rtsp_device_detect.hpp  rtsp_publisher.cpp  rtsp_remote_client_push.cpp  video_file_gst.cpp
src/m_common/srv/: CancelMission.srv  EmergencyStop.srv  RTSPStreamSwitch.srv  ReportVideoWarning.srv  SendWaypoints.srv  SetPause.srv
test/: MISSION_MIGRATION_TEST.md  README.md  fake_odom_pub.py  mock_follow_waypoints_server.py  quick_test.py  run_cli_service_test.sh  run_pause_test.sh  run_service_integration_test.sh  run_usv_migrate_smoke_test.sh  test_nav_services.py  test_pause_resume.py  usv_migrate_smoke_test.py
tools/: setup_nx_ssh.sh  sync_gcs_json_to_usv_nav.sh  sync_gcs_json_to_yildiz.sh  sync_to_nx.sh  usv_nav_run_order.sh  yildiz_run_order.sh
(+919 files in other folders)
