<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m_common</name>
  <version>0.0.1</version>
  <description>
    Aggregated common header-only / utility libraries for the ros2_perception
    workspace. Sub-libraries are exposed as namespaced imported targets:
      - m_common::mlogger         (spdlog-based logging wrapper, header-only)
      - m_common::m_utils         (misc C++17 utilities, static lib)
      - m_common::rtsp_interface  (简易 RTSP 推流：GStreamer gst-rtsp-server)
  </description>
  <maintainer email="zhiwei.jiang@uqirobot.com">jzw</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>spdlog</depend>
  <depend>libopencv-dev</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
